# TlahtoaData

./: .gitignore  .mailmap  README.md  _quarto.yml  ai-log.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
dashboard/: comparativa.qmd  index.qmd  loteria.html  metodologia.qmd  render_dashboard.py  trayectorias.qmd
dashboard/juego/: index.html
dashboard/juego/assets/: MapaMexico-BFPi0LlR.js  ParaDojasMexico-Dns6qO3a.js  RadiografiaEstatal-CTHcpfFD.js  RankingODS-DY0p8mQ2.js  SimuladorImpacto-YmblIY42.js  index-C6gLYfaf.js  index-uik9rSlH.css  odsMetrics-jNULMK_u.js  papaparse-CpaFm_Ba.js  react-vendor-D45OKRiW.js  recharts-DqXiZxIW.js  useDatosODS-C5dwAExH.js
dashboard/juego/characters/: char_mateo_alert.json
dashboard/juego/data/: irte_por_estado.csv  matriz_consecuencias_tlahtoa.json  mazo_mock.json  mazo_tlahtoa.json  ods_variables_por_estado.csv  profiles.json  scenario_templates.json
dashboard/juego/data/static_api/: deck.json  narratives.json  simulations.json  states.json
scripts/: generar_mapa.py
