[project]
name = "tlahtoa-data"
version = "2026.1.0"
description = "Tlahtoa Data — Observatorio Narrativo de Trayectorias de Desigualdad"
authors = [
  { name = "Jesús Rafael Loggen Gonzalez", email = "loggibooy@gmail.com" },
  { name = "Ilse Cristina Gonzalez Diaz",  email = "ilse@tlahtoa.mx" },
  { name = "Zabdiel Taboada Vera",          email = "zabdiel@tlahtoa.mx" },
]
readme = "README.md"
license = { text = "CC-BY-NC-SA-4.0" }
requires-python = ">=3.10"

dependencies = [
  "pandas>=2.0",
  "plotly>=5.0",
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "jsonschema>=4.0",
  "openpyxl>=3.1",
  "requests>=2.28",
  "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
dev-dependencies = ["pytest>=7.0"]
